--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+---
+---
+
+@import 'jekyll-theme-cayman';
+
 body {
  font-family: "Iowan Old Style", "Sitka Text", Palatino, "Book Antiqua", serif;
 }
