--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,5 +4,5 @@
 @import 'jekyll-theme-cayman';
 
 body {
- font-family: "Iowan Old Style", "Sitka Text", Palatino, "Book Antiqua", serif;
+ font-family: "Iowan Old Style", "Sitka Text", Palatino, "Book Antiqua", serif; !important
 }
