--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import 'jekyll-theme-cayman';
+@import "";
 body {
  font-family: "Iowan Old Style", "Sitka Text", Palatino, "Book Antiqua", serif; !important
 }
