--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,5 +3,5 @@
 
 @import "";
 body {
- font-family: "Iowan Old Style", "Sitka Text", Palatino, "Book Antiqua", serif; !important
+ font-family: "Iowan Old Style", "Sitka Text", Palatino, "Book Antiqua", serif;
 }
