--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "";
+@import "{{ site.theme }}";
 body {
  font-family: "Iowan Old Style", "Sitka Text", Palatino, "Book Antiqua", serif;
 }
